--- a/components/TechStack/TechStack.css
+++ b/components/TechStack/TechStack.css
@@ -49,7 +49,7 @@
 }
 
 .marquee-content {
-	animation: scroll 20s linear infinite;
+	animation: scroll 45s linear infinite;
 }
 
 .marquee-reverse {
@@ -65,3 +65,7 @@
 	}
 }
 
+.tech-logo {
+    height: 60px;
+    width: 60px;
+}
